@@ -710,6 +710,7 @@ Dustin J. Mitchell
 Dom Mitchell
 Florian Mladitsch
 Doug Moen
+Jaakko Moisio
 The Dragon De Monsyne
 Skip Montanaro
 Paul Moore
